--- a/apps/web/public/staticwebapp.config.json
+++ b/apps/web/public/staticwebapp.config.json
@@ -46,6 +46,7 @@
     "navigationFallback": {
         "rewrite": "/index.html",
         "exclude": [
+            "/.auth/*",
             "/api/*",
             "/images/*",
             "/assets/*",
