Configure member provider to use External ID CIAM endpoint with signup user flow
- Updated wellKnownOpenIdConfiguration to use somostechus.ciamlogin.com
- Uses External ID tenant with somos-dev-signup user flow
- Member authentication now supports self-service signup for external users
- Appid parameter ensures proper app context for the user flow

--- a/apps/web/public/staticwebapp.config.json
+++ b/apps/web/public/staticwebapp.config.json
@@ -99,7 +99,7 @@
                             "clientSecretSettingName": "EXTERNAL_MEMBER_CLIENT_SECRET"
                         },
                         "openIdConnectConfiguration": {
-                            "wellKnownOpenIdConfiguration": "https://login.microsoftonline.com/ea315caf-5fa1-4348-a3f8-e50867ae19d4/v2.0/.well-known/openid-configuration"
+                            "wellKnownOpenIdConfiguration": "https://somostechus.ciamlogin.com/somostechus.onmicrosoft.com/v2.0/.well-known/openid-configuration?appid=2be101c5-90d9-4764-b30c-0ba3fa3b4a27"
                         }
                     },
                     "login": {
