--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -99,7 +99,7 @@
                             "clientSecretSettingName": "EXTERNAL_MEMBER_CLIENT_SECRET"
                         },
                         "openIdConnectConfiguration": {
-                            "wellKnownOpenIdConfiguration": "https://login.microsoftonline.com/ea315caf-5fa1-4348-a3f8-e50867ae19d4/v2.0/.well-known/openid-configuration"
+                            "wellKnownOpenIdConfiguration": "https://somostechus.ciamlogin.com/somostechus.onmicrosoft.com/v2.0/.well-known/openid-configuration?appid=2be101c5-90d9-4764-b30c-0ba3fa3b4a27"
                         }
                     },
                     "login": {
