--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -27,13 +27,13 @@
         {
             "route": "/admin*",
             "allowedRoles": [
-                "authenticated"
+                "anonymous"
             ]
         },
         {
             "route": "/profile",
             "allowedRoles": [
-                "authenticated"
+                "anonymous"
             ]
         },
         {
@@ -66,10 +66,6 @@
         ]
     },
     "responseOverrides": {
-        "401": {
-            "statusCode": 302,
-            "redirect": "/.auth/login/aad?post_login_redirect_uri=.referrer"
-        },
         "403": {
             "redirect": "/unauthorized",
             "statusCode": 302
