Fix authentication persistence - add EXTERNAL_* env vars to workflow
Root cause: GitHub Actions deployments were overwriting app settings
- Updated deploy-static-web-app.yml to pass EXTERNAL_* credentials as env vars
- Added EXTERNAL_TENANT_ID, EXTERNAL_ADMIN_CLIENT_ID/SECRET, EXTERNAL_MEMBER_CLIENT_ID/SECRET
- Fixed VITE_API_URL to use correct function app endpoint
- Created GITHUB_SECRETS_SETUP.md with instructions to add required secrets

Next step: Add the 5 required secrets to GitHub repository settings
Without these secrets, deployments will continue to break authentication

--- a/.github/workflows/deploy-static-web-app.yml
+++ b/.github/workflows/deploy-static-web-app.yml
@@ -51,9 +51,13 @@ jobs:
           api_location: 'apps/web/api'
           output_location: 'dist'
         env:
-          VITE_API_URL: ''
+          VITE_API_URL: 'https://func-somos-tech-dev-64qb73pzvgekw.azurewebsites.net'
           VITE_ENVIRONMENT: dev
-          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          EXTERNAL_TENANT_ID: ${{ secrets.EXTERNAL_TENANT_ID }}
+          EXTERNAL_ADMIN_CLIENT_ID: ${{ secrets.EXTERNAL_ADMIN_CLIENT_ID }}
+          EXTERNAL_ADMIN_CLIENT_SECRET: ${{ secrets.EXTERNAL_ADMIN_CLIENT_SECRET }}
+          EXTERNAL_MEMBER_CLIENT_ID: ${{ secrets.EXTERNAL_MEMBER_CLIENT_ID }}
+          EXTERNAL_MEMBER_CLIENT_SECRET: ${{ secrets.EXTERNAL_MEMBER_CLIENT_SECRET }}
 
   # Deploy to production (manual approval required via environment protection rules)
   deploy-prod:
