--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,6 +2,7 @@
     "name": "admin-dashboard-api",
     "version": "1.0.0",
     "description": "Azure Functions API for Admin Dashboard",
+    "type": "module",
     "main": "index.js",
     "scripts": {
         "start": "func start",
