Fix API routing by removing VITE_API_URL from deployment
- Remove VITE_API_URL environment variable from Static Web App deployment
- This forces all API calls to use relative paths (/api/*)
- Static Web App will proxy these to the function app via forwardingGateway
- Fixes 404 errors on admin-users/list, notifications/count, etc.

--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -172,5 +172,6 @@ jobs:
           output_location: 'dist'
           skip_app_build: false
         env:
-          VITE_API_URL: ${{ vars.VITE_API_URL }}
+          # Do NOT set VITE_API_URL - let the Static Web App proxy handle API routing
+          # VITE_API_URL: ${{ vars.VITE_API_URL }}
           VITE_ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
