Fix API routing for Flex Consumption Function App
- Remove forwardingGateway (not supported for Flex Consumption)
- Add direct proxy rewrite rule for /api/* routes
- Use {uri} to preserve full request path including /api prefix
- This should resolve 'Backend call failure' errors

--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -1,6 +1,12 @@
 {
     "routes": [
         {
+            "route": "/api/*",
+            "allowedRoles": ["authenticated", "anonymous"],
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "rewrite": "https://func-somos-tech-dev-64qb73pzvgekw.azurewebsites.net{uri}"
+        },
+        {
             "route": "/",
             "allowedRoles": [
                 "anonymous"
