--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -1,6 +1,10 @@
 {
     "routes": [
         {
+            "route": "/api/*",
+            "allowedRoles": ["authenticated", "anonymous"]
+        },
+        {
             "route": "/",
             "allowedRoles": [
                 "anonymous"
