Fix duplicate /api/* routes in public/staticwebapp.config.json

--- a/apps/web/public/staticwebapp.config.json
+++ b/apps/web/public/staticwebapp.config.json
@@ -37,22 +37,8 @@
             ]
         },
         {
-            "route": "/api/GetUserRoles",
-            "allowedRoles": [
-                "anonymous"
-            ]
-        },
-        {
-            "route": "/api/register",
-            "allowedRoles": [
-                "anonymous"
-            ]
-        },
-        {
             "route": "/api/*",
-            "allowedRoles": [
-                "authenticated"
-            ]
+            "allowedRoles": ["authenticated", "anonymous"]
         }
     ],
     "navigationFallback": {
