Fix: Add rolesSource to SWA config to enable admin role assignment

--- a/apps/web/public/staticwebapp.config.json
+++ b/apps/web/public/staticwebapp.config.json
@@ -62,6 +62,7 @@
         }
     },
     "auth": {
+        "rolesSource": "/api/GetUserRoles",
         "identityProviders": {
             "azureActiveDirectory": {
                 "registration": {
