--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -64,6 +64,7 @@
         }
     },
     "auth": {
+        "rolesSource": "/api/GetUserRoles",
         "identityProviders": {
             "azureActiveDirectory": {
                 "registration": {
