fix(api): Move check-admin to external Function App, disable SWA managed functions
- Remove api_location from SWA workflow to use linked Azure Function App backend
- Add checkAdmin.js to external Function App with same logic
- This fixes 404 errors on /api/users/sync, /api/GetUserRoles, etc.

The SWA managed functions were intercepting all /api/* requests but only
had the check-admin endpoint, causing other API calls to return 404.
By removing the managed functions, all API requests now go to the
linked external Azure Function App which has all the endpoints.

--- a/.github/workflows/deploy-static-web-app.yml
+++ b/.github/workflows/deploy-static-web-app.yml
@@ -48,7 +48,7 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
           app_location: 'apps/web'
-          api_location: 'apps/web/api'
+          api_location: ''  # Empty - using linked Azure Function App backend
           output_location: 'dist'
         env:
           VITE_API_URL: 'https://func-somos-tech-dev-64qb73pzvgekw.azurewebsites.net'
@@ -78,7 +78,7 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
           app_location: 'apps/web'
-          api_location: 'apps/web/api'
+          api_location: ''  # Empty - using linked Azure Function App backend
           output_location: 'dist'
         env:
           VITE_API_URL: ${{ vars.VITE_API_URL }}
@@ -104,7 +104,7 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
           app_location: 'apps/web'
-          api_location: 'apps/web/api'
+          api_location: ''  # Empty - using linked Azure Function App backend
           output_location: 'dist'
         env:
           VITE_API_URL: https://func-somos-tech-dev-64qb73pzvgekw.azurewebsites.net
