fix(swa): Trigger SWA deployment and allow authenticated users on admin routes
- Added 'authenticated' role to /admin* route
- This commit triggers the SWA workflow to deploy with api_location: ''
- Removes managed functions so all /api/* calls go to linked Function App

--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -27,7 +27,8 @@
         {
             "route": "/admin*",
             "allowedRoles": [
-                "anonymous"
+                "anonymous",
+                "authenticated"
             ]
         },
         {
