feat: Add Member Dashboard and improve post-login routing
- Create MemberDashboard.tsx with personalized welcome, profile image, and quick actions
- Update Login.tsx to redirect members to /member, admins to /admin
- Update Register.tsx to redirect new users to /member dashboard
- Add /member route to staticwebapp.config.json
- Members now land on a dedicated dashboard after login

--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -38,6 +38,13 @@
             ]
         },
         {
+            "route": "/member",
+            "allowedRoles": [
+                "anonymous",
+                "authenticated"
+            ]
+        },
+        {
             "route": "/api/*",
             "allowedRoles": ["authenticated", "anonymous"]
         }
