--- a/.github/workflows/deploy-function-app.yml
+++ b/.github/workflows/deploy-function-app.yml
@@ -22,6 +22,49 @@ env:
   NODE_VERSION: '20'
 
 jobs:
+  # Auto-deploy to dev on push to main (when api files change)
+  deploy-on-push:
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    environment: dev
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ env.NODE_VERSION }}
+        cache: 'npm'
+        cache-dependency-path: apps/api/package-lock.json
+
+    - name: Install dependencies
+      run: npm ci
+      working-directory: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+
+    - name: Run tests (if available)
+      run: npm test --if-present
+      working-directory: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+      continue-on-error: true
+
+    - name: Login to Azure
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deploy to Azure Functions (Dev - Auto)
+      uses: Azure/functions-action@v1
+      with:
+        app-name: ${{ vars.AZURE_FUNCTIONAPP_NAME }}
+        package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+        scm-do-build-during-deployment: false
+        enable-oryx-build: false
+
+    - name: Azure logout
+      run: az logout
+      if: always()
+
   # Deploy to dev (manual dispatch only)
   deploy-dev:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev'
