--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,7 @@
         "@azure/cosmos": "^4.7.0",
         "@azure/data-tables": "^13.2.2",
         "@azure/functions": "^4.8.0",
-        "@azure/identity": "^4.13.0"
+        "@azure/identity": "^4.13.0",
+        "@azure/storage-blob": "^12.18.0"
     }
 }
