--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build && cp staticwebapp.config.json dist/",
+    "build": "tsc -b && vite build && node -e \"require('fs').copyFileSync('staticwebapp.config.json', 'dist/staticwebapp.config.json')\"",
     "lint": "eslint .",
     "preview": "vite preview"
   },
