--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@azure/communication-email": "^1.1.0",
     "@azure/cosmos": "^4.8.0",
     "@azure/identity": "^4.13.0"
   }
