--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
         "@azure/data-tables": "^13.2.2",
         "@azure/functions": "^4.8.0",
         "@azure/identity": "^4.13.0",
+        "@azure/msal-node": "^2.16.0",
         "@azure/storage-blob": "^12.18.0"
     }
 }
