fix: Remove VITE_API_URL from production to fix 401 Unauthorized errors
ROOT CAUSE:
- VITE_API_URL was set to direct Azure Functions URL
- Direct calls bypass SWA proxy which adds x-ms-client-principal header
- Without auth header, API returns 401 Unauthorized

FIX:
- Remove VITE_API_URL from all deployment environments in workflow
- Update httpClient to only use VITE_API_URL on localhost
- API calls now use relative paths (/api/...) through SWA proxy
- SWA proxy adds authentication headers automatically

PREVENTION:
- Added comments in workflow explaining why VITE_API_URL must not be set
- Updated env.example with warning about production
- httpClient now ignores VITE_API_URL when not on localhost

--- a/.github/workflows/deploy-static-web-app.yml
+++ b/.github/workflows/deploy-static-web-app.yml
@@ -51,7 +51,8 @@ jobs:
           api_location: ''  # Empty - using linked Azure Function App backend
           output_location: 'dist'
         env:
-          VITE_API_URL: 'https://func-somos-tech-dev-64qb73pzvgekw.azurewebsites.net'
+          # IMPORTANT: Do NOT set VITE_API_URL here!
+          # API calls must go through SWA proxy (/api/...) to get auth headers
           VITE_ENVIRONMENT: dev
 
       - name: Azure Login
@@ -96,7 +97,8 @@ jobs:
           api_location: ''  # Empty - using linked Azure Function App backend
           output_location: 'dist'
         env:
-          VITE_API_URL: ${{ vars.VITE_API_URL }}
+          # IMPORTANT: Do NOT set VITE_API_URL here!
+          # API calls must go through SWA proxy (/api/...) to get auth headers
           VITE_ENVIRONMENT: prod
 
       - name: Azure Login
@@ -141,7 +143,8 @@ jobs:
           api_location: ''  # Empty - using linked Azure Function App backend
           output_location: 'dist'
         env:
-          VITE_API_URL: https://func-somos-tech-dev-64qb73pzvgekw.azurewebsites.net
+          # IMPORTANT: Do NOT set VITE_API_URL here!
+          # API calls must go through SWA proxy (/api/...) to get auth headers
           VITE_ENVIRONMENT: preview
 
   close_pull_request_job:
