--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -1,12 +1,15 @@
 # Environment Variables Template
 # Copy this file to .env.local and fill in the values
 
-# API Endpoint - Update after deploying Azure Function App
+# API Endpoint - ONLY for local development
+# In production, leave this UNSET so API calls go through SWA proxy
+# The SWA proxy adds authentication headers (x-ms-client-principal)
+# Direct calls to Azure Functions URL will fail with 401 Unauthorized
 VITE_API_URL=http://localhost:7071
 
 # Environment
 VITE_ENVIRONMENT=development
 
-# For production deployment, update these values:
-# VITE_API_URL=https://func-somos-tech-dev-xxxxx.azurewebsites.net
-# VITE_ENVIRONMENT=production
+# ⚠️ PRODUCTION WARNING:
+# Do NOT set VITE_API_URL in production deployments!
+# Setting it to the Azure Functions URL bypasses SWA authentication.
