--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,10 +11,12 @@
     "dependencies": {
         "@azure/communication-email": "^1.0.0",
         "@azure/cosmos": "^4.7.0",
+        "@azure/core-auth": "^1.9.0",
         "@azure/data-tables": "^13.2.2",
         "@azure/functions": "^4.8.0",
         "@azure/identity": "^4.13.0",
         "@azure/msal-node": "^2.16.0",
-        "@azure/storage-blob": "^12.18.0"
+        "@azure/storage-blob": "^12.18.0",
+        "@azure-rest/ai-content-safety": "^1.0.0"
     }
 }
