feat(auth): Configure new admin Entra ID tenant for admin portal
Authentication Changes:
- Update admin portal to use new Entra ID tenant cff2ae9c-4810-4a92-a3e8-46e649cbdbe4
- App Registration: SOMOS.tech Admin Portal (dcf7379e-4576-4544-893f-77d6649390d3)
- Changed app settings from EXTERNAL_ADMIN_* to ADMIN_AAD_*
- Both staticwebapp.config.json files updated with new tenant

Two Identity Providers:
- Admin (/admin/*): Uses azureActiveDirectory (aad) provider
  - Login: /.auth/login/aad
  - Tenant: cff2ae9c-4810-4a92-a3e8-46e649cbdbe4
- Member (/member/*): Uses customOpenIdConnectProviders.member
  - Login: /.auth/login/member
  - CIAM: somostechus.ciamlogin.com

New Files:
- scripts/setup-admin-entra-auth.ps1: Setup script for admin auth configuration

Azure Configuration Applied:
- App settings ADMIN_AAD_CLIENT_ID and ADMIN_AAD_CLIENT_SECRET set
- Redirect URIs added to Entra ID app registration:
  - https://dev.somos.tech/.auth/login/aad/callback
  - https://fd-somostech-*.z02.azurefd.net/.auth/login/aad/callback
  - https://swa-somos-tech-dev-*.westus2.azurestaticapps.net/.auth/login/aad/callback

--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -74,9 +74,9 @@
         "identityProviders": {
             "azureActiveDirectory": {
                 "registration": {
-                    "openIdIssuer": "https://login.microsoftonline.com/ea315caf-5fa1-4348-a3f8-e50867ae19d4/v2.0",
-                    "clientIdSettingName": "EXTERNAL_ADMIN_CLIENT_ID",
-                    "clientSecretSettingName": "EXTERNAL_ADMIN_CLIENT_SECRET"
+                    "openIdIssuer": "https://login.microsoftonline.com/cff2ae9c-4810-4a92-a3e8-46e649cbdbe4/v2.0",
+                    "clientIdSettingName": "ADMIN_AAD_CLIENT_ID",
+                    "clientSecretSettingName": "ADMIN_AAD_CLIENT_SECRET"
                 },
                 "login": {
                     "loginParameters": ["scope=openid profile email"]
