--- a/.github/workflows/deploy-static-web-app.yml
+++ b/.github/workflows/deploy-static-web-app.yml
@@ -66,11 +66,11 @@ jobs:
             --name "swa-somos-tech-dev-64qb73pzvgekw" \
             --resource-group "rg-somos-tech-dev" \
             --setting-names \
-              "EXTERNAL_TENANT_ID=${{ secrets.EXTERNAL_TENANT_ID }}" \
-              "EXTERNAL_ADMIN_CLIENT_ID=${{ secrets.EXTERNAL_ADMIN_CLIENT_ID }}" \
-              "EXTERNAL_ADMIN_CLIENT_SECRET=${{ secrets.EXTERNAL_ADMIN_CLIENT_SECRET }}" \
-              "EXTERNAL_MEMBER_CLIENT_ID=${{ secrets.EXTERNAL_MEMBER_CLIENT_ID }}" \
-              "EXTERNAL_MEMBER_CLIENT_SECRET=${{ secrets.EXTERNAL_MEMBER_CLIENT_SECRET }}" \
+              "ADMIN_AAD_CLIENT_ID=${{ secrets.ADMIN_AAD_CLIENT_ID }}" \
+              "ADMIN_AAD_CLIENT_SECRET=${{ secrets.ADMIN_AAD_CLIENT_SECRET }}" \
+              "AUTH0_CLIENT_ID=${{ secrets.AUTH0_CLIENT_ID }}" \
+              "AUTH0_CLIENT_SECRET=${{ secrets.AUTH0_CLIENT_SECRET }}" \
+              "AUTH0_DOMAIN=${{ secrets.AUTH0_DOMAIN }}" \
               "VITE_ENVIRONMENT=dev"
         env:
           AZURE_CORE_OUTPUT: none
@@ -112,11 +112,11 @@ jobs:
             --name "${{ vars.SWA_NAME }}" \
             --resource-group "${{ vars.RESOURCE_GROUP }}" \
             --setting-names \
-              "EXTERNAL_TENANT_ID=${{ secrets.EXTERNAL_TENANT_ID }}" \
-              "EXTERNAL_ADMIN_CLIENT_ID=${{ secrets.EXTERNAL_ADMIN_CLIENT_ID }}" \
-              "EXTERNAL_ADMIN_CLIENT_SECRET=${{ secrets.EXTERNAL_ADMIN_CLIENT_SECRET }}" \
-              "EXTERNAL_MEMBER_CLIENT_ID=${{ secrets.EXTERNAL_MEMBER_CLIENT_ID }}" \
-              "EXTERNAL_MEMBER_CLIENT_SECRET=${{ secrets.EXTERNAL_MEMBER_CLIENT_SECRET }}" \
+              "ADMIN_AAD_CLIENT_ID=${{ secrets.ADMIN_AAD_CLIENT_ID }}" \
+              "ADMIN_AAD_CLIENT_SECRET=${{ secrets.ADMIN_AAD_CLIENT_SECRET }}" \
+              "AUTH0_CLIENT_ID=${{ secrets.AUTH0_CLIENT_ID }}" \
+              "AUTH0_CLIENT_SECRET=${{ secrets.AUTH0_CLIENT_SECRET }}" \
+              "AUTH0_DOMAIN=${{ secrets.AUTH0_DOMAIN }}" \
               "VITE_ENVIRONMENT=prod"
         env:
           AZURE_CORE_OUTPUT: none
