--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -83,18 +83,18 @@
                 }
             },
             "customOpenIdConnectProviders": {
-                "member": {
+                "auth0": {
                     "registration": {
-                        "clientIdSettingName": "EXTERNAL_MEMBER_CLIENT_ID",
+                        "clientIdSettingName": "AUTH0_CLIENT_ID",
                         "clientCredential": {
-                            "clientSecretSettingName": "EXTERNAL_MEMBER_CLIENT_SECRET"
+                            "clientSecretSettingName": "AUTH0_CLIENT_SECRET"
                         },
                         "openIdConnectConfiguration": {
-                            "wellKnownOpenIdConfiguration": "https://somostechus.ciamlogin.com/somostechus.onmicrosoft.com/v2.0/.well-known/openid-configuration?appid=2be101c5-90d9-4764-b30c-0ba3fa3b4a27"
+                            "wellKnownOpenIdConfiguration": "https://dev-0tp5bbdn7af0lfpv.us.auth0.com/.well-known/openid-configuration"
                         }
                     },
                     "login": {
-                        "nameClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
+                        "nameClaimType": "name",
                         "scopes": ["openid", "profile", "email"]
                     }
                 }
