--- a/scripts/package.json
+++ b/scripts/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@azure/communication-email": "^1.1.0",
     "@azure/cosmos": "^4.8.0",
-    "@azure/identity": "^4.13.0"
+    "@azure/identity": "^4.13.0",
+    "@azure/storage-blob": "^12.29.1"
   }
 }
