feat: add Auth0 user management (admin disable/delete, user self-deletion)
Backend:
- Created auth0Service.js for Auth0 Management API integration
- Created auth0Users.js with endpoints:
  - PUT /api/auth0/users/{userId}/block - Admin block user
  - PUT /api/auth0/users/{userId}/unblock - Admin unblock user
  - DELETE /api/auth0/users/{userId} - Admin delete user
  - DELETE /api/auth0/account - User self-deletion
  - GET /api/auth0/status - Check API configuration

Frontend:
- Created auth0Service.ts API client
- Updated AdminUsers.tsx to sync with Auth0 on block/unblock
- Updated Profile.tsx with Danger Zone for account self-deletion
  - Only shown for Auth0 users
  - Requires typing DELETE to confirm
  - Logs out user after deletion

Configuration:
- Added AUTH0_DOMAIN, AUTH0_MANAGEMENT_CLIENT_ID, AUTH0_MANAGEMENT_CLIENT_SECRET
- Created setup-auth0-management.ps1 script for easy configuration

--- a/apps/api/local.settings.json
+++ b/apps/api/local.settings.json
@@ -14,7 +14,10 @@
         "VENUE_AGENT_ID": "asst_DdidWVi5Z86V1QZ8FX42sTrb",
         "COSMOS_ENDPOINT": "https://cosmos-somos-tech-dev-64qb73pzvgekw.documents.azure.com:443/",
         "COSMOS_DATABASE_NAME": "somostech",
-        "ALLOWED_ADMIN_DOMAIN": "somos.tech"
+        "ALLOWED_ADMIN_DOMAIN": "somos.tech",
+        "AUTH0_DOMAIN": "auth.somos.tech",
+        "AUTH0_MANAGEMENT_CLIENT_ID": "",
+        "AUTH0_MANAGEMENT_CLIENT_SECRET": ""
     },
     "Host": {
         "CORS": "*"
