--- a/apps/api/local.settings.json
+++ b/apps/api/local.settings.json
@@ -15,8 +15,8 @@
         "COSMOS_ENDPOINT": "https://cosmos-somos-tech-dev-64qb73pzvgekw.documents.azure.com:443/",
         "COSMOS_DATABASE_NAME": "somostech",
         "ALLOWED_ADMIN_DOMAIN": "somos.tech",
-        "AUTH0_DOMAIN": "auth.somos.tech",
-        "AUTH0_MANAGEMENT_CLIENT_ID": "",
+        "AUTH0_DOMAIN": "dev-0tp5bbdn7af0lfpv.us.auth0.com",
+        "AUTH0_MANAGEMENT_CLIENT_ID": "08aK1L6WykfRr1h10gsd4K24Ywy4xcpX",
         "AUTH0_MANAGEMENT_CLIENT_SECRET": ""
     },
     "Host": {
