feat: Add Google Safe Browsing API integration and merge integrations into health dashboard
- Add Google Safe Browsing URL checking to Tier 2 link safety moderation
- Add checkGoogleSafeBrowsing() function in moderationService.js
- Add trackGoogleSafeBrowsingCall() function in apiTrackingService.js
- Add googleSafeBrowsing health check in apiHealthCheck.js
- Add Google Safe Browsing status and limits in apiStatus.js
- Update APITracker.tsx with Google Safe Browsing usage stats display
- Merge APITracker into APIHealthDashboard as a primary card
- Redirect AdminIntegrations page to unified health dashboard
- Add GOOGLE_SAFE_BROWSING_API_KEY to local.settings.json

API Key: AIzaSyAF8q7N5Uzwmev9PxWw6NoDViSval0op4w
Free tier limit: 10,000 requests/day

--- a/apps/api/local.settings.json
+++ b/apps/api/local.settings.json
@@ -17,7 +17,8 @@
         "ALLOWED_ADMIN_DOMAIN": "somos.tech",
         "AUTH0_DOMAIN": "dev-0tp5bbdn7af0lfpv.us.auth0.com",
         "AUTH0_MANAGEMENT_CLIENT_ID": "08aK1L6WykfRr1h10gsd4K24Ywy4xcpX",
-        "AUTH0_MANAGEMENT_CLIENT_SECRET": ""
+        "AUTH0_MANAGEMENT_CLIENT_SECRET": "",
+        "GOOGLE_SAFE_BROWSING_API_KEY": "AIzaSyAF8q7N5Uzwmev9PxWw6NoDViSval0op4w"
     },
     "Host": {
         "CORS": "*"
